# isolation_server

./: .gitignore  .gitmodules  Acceptor.cpp  Acceptor.h  CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  README.md  Server.cpp  Server.h  TestAsyncServer.cpp  TestAsyncServer.h  lobbyManager.cpp  lobbyManager.h  main.cpp  redis.md  redisService.cpp  redisService.h  room.cpp  room.h  roomManager.cpp  roomManager.h  session.cpp  session.h  test.h  tokenPool.h  util.cpp  util.h
.github/workflows/: build-and-execute.yml  build-and-run.yml  test-variable.yml
deprecated/: lobbyManager.cpp  lobbyManager.h  room.cpp  room.h  session.h  리눅스개발환경구축.txt
protoc/: CMakeLists.txt  cpp.sh  error_message.pb.cc  error_message.pb.h  error_message.proto  game_message.pb.cc  game_message.pb.h  game_message.proto  login_message.pb.cc  login_message.pb.h  login_message.proto  proto_message.pb.cc  proto_message.pb.h  proto_message.proto  room_message.pb.cc  room_message.pb.h  room_message.proto  sync_message.pb.cc  sync_message.pb.h  sync_message.proto  waiting_room_message.proto
